--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@ a {
   transition: .4s ease;
 }
 
-header {
+header, .stats, #skills, #aboutme, footer {
   background-color: #10151b;
 }
 
@@ -27,19 +27,19 @@ header {
           filter: hue-rotate(-25deg) brightness(1.2);
 }
 
-.stats {
-  background-color: #10151b;
+::-webkit-scrollbar {
+  width: .8rem;
 }
 
-#skills {
-  background-color: #10151b;
+::-webkit-scrollbar-track {
+  background: #2D3748;
 }
 
-#aboutme {
-  background-color: #10151b;
+::-webkit-scrollbar-thumb {
+  background: #319795;
 }
 
-footer {
-  background-color: #10151b;
+::-webkit-scrollbar-thumb:hover {
+  background: #38B2AC;
 }
 /*# sourceMappingURL=stylesheet.css.map */
